--- a/src/RFL.Eventos.IO.Domain/RFL.Eventos.IO.Domain.csproj
+++ b/src/RFL.Eventos.IO.Domain/RFL.Eventos.IO.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RFL.Eventos.IO.Domain.Core\RFL.Eventos.IO.Domain.Core.csproj" />
   </ItemGroup>
 
