Continuacao da implementacao do CQRS, adicionando Eventos e Service Bus.

--- a/src/RFL.Eventos.IO.Domain.Core/RFL.Eventos.IO.Domain.Core.csproj
+++ b/src/RFL.Eventos.IO.Domain.Core/RFL.Eventos.IO.Domain.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="FluentValidation" Version="8.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Bus\" />
+  </ItemGroup>
+
 </Project>
